--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,31 +1,44 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: neil-buckley # Your GitHub organization or username, where this repository lives
+repo: ellis-status # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Ellis Application - https://searches.ellis.ie/
+    url: https://searches.ellis.ie/
+  - name: Ellis Site - https://www.ellis.ie/
+    url: https://www.ellis.ie/
+  - name: ISI Site
+    url:  https://isi.jahs.ie/public/cases
+    icon: https://isi.jahs.ie/static/images/isi_logo.png
+  - name: ISI System
+    url: $ISI_API
+    icon: https://isi.jahs.ie/static/images/isi_logo.png
+  - name: Land Registry
+    url: https://www.landdirect.ie/pramap/
+    icon: https://www.landdirect.ie/images/Form17/PRASymbol.png
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  # cname: demo.upptime.js.org
+  baseUrl: /ellis-status
+  logoUrl: https://searches.ellis.ie/images/logo.png
+  favicon: https://searches.ellis.ie/favicon.ico
+  robotsText: "User-agent: * \n Disallow: /"
+  name:  Ellis & Ellis
+  introTitle: "Ellis & Ellis Uptime and Status Monitor"
+  introMessage: Realtime status monitoring of Ellis applications
   navbar:
     - title: Status
-      href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+      href: /public-status/
+    - title: Production Site
+      href: https://searches.ellis.ie/
+
+
+i18n:
+  footer: Powered by [Upptime](https://upptime.js.org) 
+  #   - title: GitHub
+  #     href: https://github.com/$OWNER/$REPO
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
