--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,7 +8,7 @@ sites:
   - name: Ellis Site - https://www.ellis.ie/
     url: https://www.ellis.ie/
   - name: ISI Site
-    url:  https://isi.jahs.ie/public/cases
+    url:  https://isi.jahs.ie/public
     icon: https://isi.jahs.ie/static/images/isi_logo.png
   - name: ISI System
     url: $ISI_API
@@ -30,7 +30,7 @@ status-website:
   introMessage: Realtime status monitoring of Ellis applications
   navbar:
     - title: Status
-      href: /public-status/
+      href: /ellis-status/
     - title: Production Site
       href: https://searches.ellis.ie/
 
