--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,15 +7,18 @@ sites:
     url: https://searches.ellis.ie/
   - name: Ellis Site - https://www.ellis.ie/
     url: https://www.ellis.ie/
-  - name: ISI Public Site
+  - name: ISI Public Site - https://isi.jahs.ie/
     url:  https://isi.jahs.ie/
     icon: https://isi.jahs.ie/static/images/isi_logo.png
+  - name: Land Registry Public Site - https://www.landdirect.ie
+    url: https://www.landdirect.ie/pramap/
+    icon: https://www.landdirect.ie/images/Form17/PRASymbol.png
   - name: ISI System
     url: $ISI_API
     icon: https://isi.jahs.ie/static/images/isi_logo.png
-  - name: Land Registry
-    url: https://www.landdirect.ie/pramap/
-    icon: https://www.landdirect.ie/images/Form17/PRASymbol.png
+  - name: CRO API
+    url: $CRO_API
+    icon: https://pbs.twimg.com/profile_images/1278628334969196545/gx2xLJ9y_400x400.jpg
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
