--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,12 +13,15 @@ sites:
   - name: Land Registry Public Site - https://www.landdirect.ie
     url: https://www.landdirect.ie/pramap/
     icon: https://www.landdirect.ie/images/Form17/PRASymbol.png
-  - name: ISI System
+  - name: ISI API
     url: $ISI_API
     icon: https://isi.jahs.ie/static/images/isi_logo.png
   - name: CRO API
     url: $CRO_API
     icon: https://pbs.twimg.com/profile_images/1278628334969196545/gx2xLJ9y_400x400.jpg
+  - name: Digital Ocean - https://status.digitalocean.com/
+    url: https://status.digitalocean.com/api/v2/status.json
+    __dangerous__body_degraded_if_text_missing: "All Systems Operational"
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
