--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -27,8 +27,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: demo.upptime.js.org
-  baseUrl: /ellis-status
+  cname: ellis-status.lphmedia.com
+  # baseUrl: /ellis-status
   logoUrl: https://searches.ellis.ie/images/logo.png
   favicon: https://searches.ellis.ie/favicon.ico
   robotsText: "User-agent: * \n Disallow: /"
