--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -62,3 +62,4 @@ jobs:
           publish_dir: "site/status-page/__sapper__/export/"
           user_name: "Upptime Bot"
           user_email: "73812536+upptime-bot@users.noreply.github.com"
+          cname: ellis-status.lphmedia.com
